# ramboq

./: .containerignore  .gitignore  ADMIN_GUIDE.md  CLAUDE.md  Containerfile  Dockerfile  MIGRATION.md  PODMAN_DEPLOY.md  README.md  USER_GUIDE.md  app.py  deployment.md  docker-compose.yml  index.html  ramboq_hook.service  requirements-api.txt  requirements.txt  run_api.sh  run_worker.sh  services.sh
.log/: hook.err
backend/: pyproject.toml  requirements-api.txt  requirements.txt  run_api.sh  run_worker.sh
backend/api/: app.py  auth_guard.py  background.py  database.py  models.py  schemas.py
backend/api/algo/: actions.py  agent_engine.py  agent_evaluator.py  chase.py  derivatives.py  events.py  expiry.py  grammar.py  grammar_registry.py  paper.py  shadow.py
backend/api/algo/demo/: __init__.py  fixtures.py
backend/api/routes/: admin.py  agents.py  algo.py  auth.py  brokers.py  charts.py  config.py  contact.py  funds.py  grammar.py  holdings.py  instruments.py  live.py  market.py  news.py  options.py  orders.py  positions.py  quote.py  replay.py  settings.py  shadow.py  simulator.py  test.py  ws.py
backend/config/: backend_config.yaml  frontend_config.yaml
backend/config/grammars/: orders.yaml
backend/scripts/: create_user.py
backend/shared/brokers/: __init__.py  base.py  kite.py  registry.py
backend/shared/helpers/: alert_utils.py  broker_apis.py  broker_creds.py  connections.py  date_time_utils.py  decorators.py  genai_api.py  mail_utils.py  ramboq_logger.py  settings.py  singleton_base.py  summarise.py  utils.py
backend/workers/: refresh_worker.py
(+187 files in other folders)
